retrieveUnpackaged/objects/WebForms__c.object
<CustomObject>
    <fields>
        <fullName>AWL_Phone_Number__c</fullName>
        <label>AWL Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_Signature_Date__c</fullName>
        <label>Employee Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Signature__c</fullName>
        <label>Employee Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <defaultValue>&quot;Episodic Flexiplace Work Description&quot;</defaultValue>
        <label>Form Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Form Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Complete this form prior to working at an episodic flexiplace AWL.&quot;</defaultValue>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Signature_Date__c</fullName>
        <label>Supervisor Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Signature__c</fullName>
        <label>Supervisor Signature</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Plum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webforms_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WebForms</relationshipLabel>
        <relationshipName>WebForms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Description__c</fullName>
        <label>Work Description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <label>WebForms</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Name__c</columns>
        <columns>Form_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test_Queue_for_Approvals_WebForms</fullName>
        <filterScope>Queue</filterScope>
        <label>Test Queue for Approvals</label>
        <queue>Test_Queue_for_Approvals</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebForms</pluralLabel>
    <recordTypes>
        <fullName>EPA_100</fullName>
        <active>true</active>
        <description>Episodic Flexiplace Work Description</description>
        <label>EPA-100</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF182</fullName>
        <active>true</active>
        <description>AUTHORIZATION, AGREEMENT AND CERTIFICATION OF TRAINING</description>
        <label>SF182</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Signature_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISBLANK( Employee_Signature_Date__c )) , ( NOT (ISBLANK( Employee_Signature__c ))))</errorConditionFormula>
        <errorDisplayField>Employee_Signature_Date__c</errorDisplayField>
        <errorMessage>Employee Signature Date is required if signed by Employee. Enter Today&apos;s Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Signature_Date_Rule2</fullName>
        <active>true</active>
        <description>Supervisor Date Rule</description>
        <errorConditionFormula>AND((ISBLANK( Supervisor_Signature_Date__c )) , ( NOT (ISBLANK(  Supervisor_Signature__c  ))))</errorConditionFormula>
        <errorDisplayField>Supervisor_Signature_Date__c</errorDisplayField>
        <errorMessage>Supervisor Signature Date is required if signed by Supervisor. Enter Today&apos;s Date.</errorMessage>
    </validationRules>
</CustomObject>